--- a/CRM/CRM.ConsoleApp/App.config
+++ b/CRM/CRM.ConsoleApp/App.config
@@ -1,6 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-    </startup>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net, Version=2.0.12.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+  </startup>
+  <connectionStrings>
+    <add name="DynamicsDB"
+     providerName="System.Data.ProviderName"
+     connectionString="AuthType=OAuth; Url=https://mikhailmaslov.crm4.dynamics.com/; Username=me_shytka@mikhailmaslov.onmicrosoft.com; Password=Zhjckfd02; RequireNewInstance=true; AppId=51f81489-12ee-4a9e-aaae-a2591f45987d; RedirectUri=app://58145B91-0C36-4500-8554-080854F2AC97" />
+  </connectionStrings>
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="Logs\Example.log" />
+      <param name="AppendToFile" value="true" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="5MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%d  %-5p %m%n" />
+      </layout>
+    </appender>
+    <appender name="ErrorFile" type="log4net.Appender.RollingFileAppender">
+      <file value="Logs\Equifax_SenderError.log" />
+      <appendToFile value="true" />
+      <maximumFileSize value="5MB" />
+      <maxSizeRollBackups value="10" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%level %thread %logger - %message%newline" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="ERROR" />
+        <levelMax value="FATAL" />
+      </filter>
+    </appender>
+    <logger name="LOGGER">
+      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="ErrorFile" />
+    </logger>
+  </log4net>
 </configuration>
